--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="dUqMwCbk3she0MKJXl624WF7RNaqj9-0AB8Gx5xEkSg" />
     <title>Guangyi Zhu | Konami Shu | 朱 光漪</title>
     <link rel="icon" href="" />
     <meta charset="UTF-8" />
